// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link test on android Link doesnt change inner text styles 1`] = `
<View
  accessible={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  pointerEvents="box-only"
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    Hello
  </Text>
</View>
`;

exports[`Link test on android Link renders correctly 1`] = `
<View
  accessible={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  pointerEvents="box-only"
>
  The Times
</View>
`;

exports[`Link test on android TextLink renders correctly with children 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Object {
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`Link test on android TextLink renders correctly with multiple styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;

exports[`Link test on android TextLink renders correctly with specific styles 1`] = `
<Text
  accessibilityRole="link"
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  href="http://thetimes.co.uk"
  style={
    Object {
      "backgroundColor": "blue",
      "textDecorationLine": "underline",
    }
  }
>
  The Times
</Text>
`;
